Added Components for Header and Footer

--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,7 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 40px;
+  color: white;
 }
 
 .footer-tag {
@@ -153,4 +154,5 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 40px;
+  color: white;
 }
